syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Identity.Grpc.Server.Protos";

package identity;

service IdentityService {
	rpc GetUser(FindUser) returns(FindUserResponse);
}

message FindUser {
	string token = 1;
}

message FindUserResponse {
	User user = 1;
	int32 status = 2;
	string message = 3;
}


message User {
	string id = 1;
	string fullName = 2;
	string email =3;
	string phoneNumber = 4;
	google.protobuf.Timestamp activeDate = 5;
	bool isActive = 6;
}
